Organized files in folders and started finalizing

--- a/FrontEnd/src/customer-profile.html
+++ b/FrontEnd/src/customer-profile.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Customer Dashboard</title>
   </head>
   <body>
     <!-- <nav>
       <input id="nav-toggle" type="checkbox" />
-      <img src="img/logo.jpg" alt="logo" class="logo" />
+      <img src="../img/logo.jpg" alt="logo" class="logo" />
       <ul class="links">
         <li><a href="index.html">Home</a></li>
         <li><a href="find_tec.html">Find Technicians</a></li>
@@ -23,7 +23,7 @@
     </nav> -->
     <nav>
     </nav>
-    <script src="../fetch/navbarjs.js"></script>
+    <script src="script/js/navbarjs.js"></script>
     <div class="profile-container">
       <h1 class="title">Customer Profile</h1>
 
@@ -31,7 +31,7 @@
         <!-- Customer information display -->
         <div class="profile-details">
           <img
-            src="img/logo-user.png"
+            src="../img/logo-user.png"
             alt="Profile Picture"
             class="profile-pic"
           />
@@ -51,7 +51,7 @@
       <div class="container">
         <div class="footer-content">
           <div class="footer-logo">
-            <img class="logo" src="img/logo.jpg" alt="SkillTrade Hub" />
+            <img class="logo" src="../img/logo.jpg" alt="SkillTrade Hub" />
             <p>Your go-to platform for skilled trades!</p>
           </div>
           <div class="footer-links">
@@ -81,7 +81,7 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="../fetch/customerDashboard.js">
+    <script type="module" src="script/js/customerDashboard.js">
       
     </script>
   </body>
