--- a/FrontEnd/src/find_tec.html
+++ b/FrontEnd/src/find_tec.html
@@ -3,27 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Find-tec</title>
   </head>
   <body>
-    <!-- <nav>
-      <input id="nav-toggle" type="checkbox" />
-      <img src="img/logo.jpg" alt="logo" class="logo" />
-      <ul class="links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="find_tec.html">Find Technicians</a></li>
-        <li class="btn"><a href="login.html">Login</a></li>
-      </ul>
-      <label for="nav-toggle" class="icon-burger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </label>
-    </nav> -->
     <nav>
     </nav>
-    <script src="../fetch/navbarjs.js"></script>
+    <script src="script/js/navbarjs.js"></script>
     <div class="technicians">
     </div>
 
@@ -31,7 +17,7 @@
       <div class="container">
         <div class="footer-content">
           <div class="footer-logo">
-            <img class="logo" src="img/logo.jpg" alt="SkillTrade Hub" />
+            <img class="logo" src="../img/logo.jpg" alt="SkillTrade Hub" />
             <p>Your go-to platform for skilled trades!</p>
           </div>
           <div class="footer-links">
@@ -61,7 +47,7 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="../fetch/findTech.js"></script>
+    <script type="module" src="script/js/findTech.js"></script>
     
   </body>
 </html>
