--- a/FrontEnd/src/login.html
+++ b/FrontEnd/src/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Log in</title>
   </head>
   <body>
@@ -28,6 +28,6 @@
         </div>
       </div>
     </div>
-    <script src="../fetch/UserFetch.js"></script>
+    <script src="script/fetch/UserFetch.js"></script>
   </body>
 </html>
