--- a/FrontEnd/src/signup.html
+++ b/FrontEnd/src/signup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Sign up</title>
   </head>
   <body>
@@ -23,7 +23,7 @@
             />
             <label for="customer">
               <h4>As Customer</h4>
-              <img src="img/logo-user.png" alt="customer" />
+              <img src="../img/logo-user.png" alt="customer" />
             </label>
           </div>
           <div class="option">
@@ -35,7 +35,7 @@
             />
             <label for="technician">
               <h4>As Technician</h4>
-              <img src="img/logo-tech.png" alt="technicianlogo" />
+              <img src="../img/logo-tech.png" alt="technicianlogo" />
             </label>
           </div>
         </div>
@@ -154,7 +154,7 @@
       </div>
     </div>
 
-    <script src="../fetch/UserFetch.js"></script>
+    <script src="script/fetch/UserFetch.js"></script>
     <script>
       let customerRadio = document.getElementById("customer");
       let technicianRadio = document.getElementById("technician");
