--- a/FrontEnd/src/technician-profile.html
+++ b/FrontEnd/src/technician-profile.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Technician Dashboard</title>
   </head>
   <body>
     <!-- <nav>
       <input id="nav-toggle" type="checkbox" />
-      <img src="img/logo.jpg" alt="logo" class="logo" />
+      <img src="../img/logo.jpg" alt="logo" class="logo" />
       <ul class="links">
         <li><a href="index.html">Home</a></li>
         <li><a href="#">Dashboard</a></li>
@@ -22,14 +22,14 @@
     </nav> -->
     <nav>
     </nav>
-    <script src="../fetch/navbarjs.js"></script>
+    <script src="script/js/navbarjs.js"></script>
     <div class="profile-container">
-      <h1 class="title">technician profile</h1>
+      <h1 class="title">Technician profile</h1>
       <div class="profile-info">
         <div class="profile-info">
           <div class="profile-details">
             <img
-              src="./img/logo-tech.png"
+              src="./../img/logo-tech.png"
               alt="Profile Picture"
               class="profile-pic"
             />
@@ -51,8 +51,8 @@
     </div>
 
 
-   <script src="../fetch/UserFetch.js"></script>
-   <script type="module" src="../fetch/technicianDashboard.js"></script>
+   <script src="script/fetch/UserFetch.js"></script>
+   <script type="module" src="script/js/technicianDashboard.js"></script>
    <script>
     window.onload = displayProfile()
    </script>
@@ -60,7 +60,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-logo">
-          <img class="logo" src="img/logo.jpg" alt="SkillTrade Hub" />
+          <img class="logo" src="../img/logo.jpg" alt="SkillTrade Hub" />
           <p>Your go-to platform for skilled trades!</p>
         </div>
         <div class="footer-links">
