--- a/FrontEnd/src/booking.html
+++ b/FrontEnd/src/booking.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Booking</title>
   </head>
   <body>
     <nav>
     </nav>
-    <script src="../fetch/navbarjs.js"></script>
+    <script src="script/js/navbarjs.js"></script>
     <div class="all-container">
       <div class="profile-conta">
         <h1>Technician</h1>
         <div class="profile-pic">
-          <img src="img/logo-tech.png" alt="Profile Picture" />
+          <img src="../img/logo-tech.png" alt="Profile Picture" />
         </div>
 
         <div class="profile-detail">
@@ -63,7 +63,7 @@
       <div class="container">
         <div class="footer-content">
           <div class="footer-logo">
-            <img class="logo" src="img/logo.jpg" alt="SkillTrade Hub" />
+            <img class="logo" src="../img/logo.jpg" alt="SkillTrade Hub" />
             <p>Your go-to platform for skilled trades!</p>
           </div>
           <div class="footer-links">
@@ -93,6 +93,6 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="../fetch/individualTechBooking.js"></script>
+    <script type="module" src="script/js/individualTechBooking.js"></script>
   </body>
 </html>
