--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Skill Trade</title>
   </head>
   <body>
     <nav>
     </nav>
-    <script src="../fetch/navbarjs.js"></script>
+    <script src="script/js/navbarjs.js"></script>
     <section class="hero">
       <div class="container">
         <h2>Find Skilled Technicians for Your Home Services</h2>
@@ -27,30 +27,22 @@
           <p>
             Home technicians play a crucial role in ensuring the smooth
             functioning and maintenance of various household systems and
-            appliances. These skilled professionals possess a diverse range of
-            expertise, from plumbing and electrical work to HVAC maintenance and
-            appliance repair. When an issue arises within the intricate network
+            appliances. When an issue arises within the intricate network
             of a home's infrastructure, it is the home technician who is called
             upon to diagnose, troubleshoot, and implement effective solutions.
             Their proficiency not only saves homeowners from the inconvenience
             of malfunctioning systems but also contributes to the overall safety
-            and efficiency of the living space. Beyond their technical skills,
-            home technicians often exhibit excellent problem-solving abilities,
-            customer service, and a deep understanding of the latest
-            technologies in their respective fields. In many ways, these unsung
-            heroes of household maintenance play a vital role in enhancing the
-            quality of life and ensuring the longevity of the systems that make
-            a house a comfortable and functional home.
+            and efficiency of the living space.  
           </p>
         </div>
 
-        <img src="img/technician.jpg" alt="skillTrade" />
+        <img src="../img/technician.jpg" alt="skillTrade" />
       </div>
       <h2 class="h2">Our Services</h2>
       <section class="services">
         <div class="service-card">
           <h3 class="h2">Plumbing Services</h3>
-          <img src="img/plumbing.jpg" alt="Plumbing Service" />
+          <img src="../img/plumbing.jpg" alt="Plumbing Service" />
 
           <p>
             Our expert plumbers are ready to tackle any plumbing issue in your
@@ -61,7 +53,7 @@
 
         <div class="service-card">
           <h3 class="h2">Electrical Work</h3>
-          <img src="img/electrician.jpeg" alt="Electrical Work" />
+          <img src="../img/electrician.jpeg" alt="Electrical Work" />
 
           <p>
             Need electrical repairs or installations? Our skilled electricians
@@ -72,7 +64,7 @@
 
         <div class="service-card">
           <h3 class="h2">HVAC Maintenance</h3>
-          <img src="img/hvac.jpg" alt="HVAC Maintenance" />
+          <img src="../img/hvac.jpg" alt="HVAC Maintenance" />
 
           <p>
             Keep your home comfortable year-round with our HVAC maintenance
@@ -83,7 +75,7 @@
 
         <div class="service-card">
           <h3 class="h2">Desh Technician</h3>
-          <img src="img/desh-technician.jpg" alt="Desh_technician" />
+          <img src="../img/desh-technician.jpg" alt="Desh_technician" />
 
           <p>
             Is your desh-technician acting up? Our technicians specialize in
@@ -97,7 +89,7 @@
       <div class="container">
         <div class="footer-content">
           <div class="footer-logo">
-            <img class="logo" src="img/logo.jpg" alt="SkillTrade Hub" />
+            <img class="logo" src="../img/logo.jpg" alt="SkillTrade Hub" />
             <p>Your go-to platform for skilled trades!</p>
           </div>
           <div class="footer-links">
